:art: alignment fixes all over

--- a/src/routes/Home/components/ArticleList.css
+++ b/src/routes/Home/components/ArticleList.css
@@ -1,3 +1,7 @@
+.ArticleList__Ordered-List {
+    margin-top: 6em;
+}
+
 .ArticleList__Card-Item {
     display: block;
     height: auto;
